fix fonts on IE

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: pusab;
-  src: url(PUSAB__.otf);
+  src: url(pusab.otf);
 }
 
 body {
